2018-08-28  Florian Weimer  <fweimer@redhat.com>

	* support/test-container.c (main): Treat unshare failure with
	EPERM as an unsupported test.

2018-08-28  Florian Weimer  <fweimer@redhat.com>

	[BZ #23520]
	nscd: Fix use-after-free in addgetnetgrentX and its callers.
	* nscd/netgroupcache.c
	(addgetnetgrentX): Add tofreep parameter.  Do not free
	heap-allocated buffer.
	(addinnetgrX): Free buffer allocated bt addgetnetgrentX.
	(addgetnetgrentX_ignore): New function.
	(addgetnetgrent): Call it.
	(readdgetnetgrent): Likewise.

2018-08-28  Rajalakshmi Srinivasaraghavan  <raji@linux.vnet.ibm.com>

	* string/memmem.c: Use memcmp for first match.

2018-08-28  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #17426]
	* localedata/locales/en_IN (d_fmt): Use "%d/%m/%y".

2018-08-27  DJ Delorie  <dj@redhat.com>

	* support/Makefile (others): Don't list programs explicitly as a
	dependency of "others".

2018-08-27  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/generic/math-tests-trap-force.h: New file.
	* sysdeps/generic/math-tests.h: Include <math-tests-trap-force.h>.
	(EXCEPTION_SET_FORCES_TRAP): Do not define here.
	* sysdeps/powerpc/math-tests.h: Remove file.
	* sysdeps/powerpc/fpu/math-tests-trap-force.h: New file.

2018-08-27 Martin Kuchta  <martin.kuchta@netapp.com>
	   Torvald Riegel  <triegel@redhat.com>

	[BZ #23538]
	* nptl/pthread_cond_common.c (__condvar_quiesce_and_switch_g1):
	Update r to include the set wake-request flag if waiters are
	remaining after spinning.

2018-08-27  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/gnu/netinet/udp.h (UDP_SEGMENT): New macro.

2018-08-25  Paul Eggert  <eggert@cs.ucla.edu>

	regex: fix uninitialized memory access
	I introduced this bug into gnulib in commit
	8335a4d6c7b4448cd0bcb6d0bebf1d456bcfdb17 dated 2006-04-10;
	eventually it was merged into glibc.  The bug was found by
	project-repo <bugs@feusi.co> and reported here:
	https://lists.gnu.org/r/sed-devel/2018-08/msg00017.html