@@ -1,5 +1,12 @@
 2018-08-28  Florian Weimer  <fweimer@redhat.com>
 
+	[BZ #23578]
+	* posix/tst-regcomp-truncated.c: New file.
+	* posix/Makefile (tests): Add it.
+	(tst-regcomp-truncated.out): Depend on generated locales.
+
+2018-08-28  Florian Weimer  <fweimer@redhat.com>
+
 	* support/test-container.c (main): Treat unshare failure with
 	EPERM as an unsupported test.
 
@@ -51,6 +58,7 @@
 
 2018-08-25  Paul Eggert  <eggert@cs.ucla.edu>
 
+	[BZ #23578]
 	regex: fix uninitialized memory access
 	I introduced this bug into gnulib in commit
 	8335a4d6c7b4448cd0bcb6d0bebf1d456bcfdb17 dated 2006-04-10;
